# mips-ae-pylib

./: README.md  atlasexplorer.py  pyproject.toml  testharness.py
atlasexplorer/: __init__.py
atlasexplorer/reporting/: README.md  __init__.py  cli.py  derive.py  export.py  models.py  parser.py  render_cli.py  thresholds.py
diff_bundle/: baseline_diff.md  report.json  report.md  report_rich.html
examples/: ae_multicore.py  ae_multicore_diff_report.py  ae_singlecore.py
notebooks/: ae_multicore.ipynb  ae_multicore_diff_report.ipynb  ae_multicore_notebook.ipynb  ae_singlecore.ipynb  ae_singlecore_notebook.ipynb  summary_exploration.ipynb
tests/: test_ae_multicore.py  test_ae_singlecore.py
tests/reporting/: test_parser.py
